[tool.poetry]
name = "rpi-dump-gpio"
version = "0.1.2"
description = "dump the gpio values of a raspberry pi"
authors = ["Robbie Capps"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
tabulate = "^0.9.0"
pigpio = "^1.78"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rpi-dump-gpio = "rpi_dump_gpio.main:main"